--- a/level 41/homework/index.html
+++ b/level 41/homework/index.html
@@ -7,14 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="d1">Hello</p>
-    <p id="d2">Hello</p>
-    <p id="d3">Hello</p>
-    <p id="d4">Hello</p>
-    <p id="d5">Hello</p>
+    <a href="#" class="d1">GOA</a> <br><br>
+    <a href="#" class="d2">GOA</a>
 </body>
 </html>
-
-
-
-
