--- a/level 42/homewrok/index.html
+++ b/level 42/homewrok/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="d1">Hello</p>
-    <p id="d2">Hello</p>
-    <p id="d3">Hello</p>
-    <p id="d4">Hello</p>
-    <p id="d5">Hello</p>
+    <table>
+        <tr><td>GOA</td></tr>
+        <tr><td>GOA</td></tr>
+        <tr><td>GOA</td></tr>
+        <tr><td>GOA</td></tr>
+        <tr><td>GOA</td></tr>
+    </table>
 </body>
 </html>
-
-
-
-
